--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Home"
+title: "Home: Fiber Intervention Study"
 site: workflowr::wflow_site
 output:
   workflowr::wflow_html:
@@ -8,4 +8,10 @@ editor_options:
   chunk_output_type: console
 ---
 
-Welcome to my research website.
+Welcome to our research website.
+This page will contain links to the results pages from our study.
+
+
+Describing the data:
+
+*[Data Summary Statistics](summary_stats.html)
