glmm results added

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -26,4 +26,4 @@ Describing the data:
 
 *[Changes in Alpha Diversity](lme_alpha.html)
 
-*[Changes in Phylum Abundance](mle_microbiome.html)
+*[Changes in Phylum Abundance](lme_microbiome.html)
