updated output window size

--- a/analysis/data_processing.Rmd
+++ b/analysis/data_processing.Rmd
@@ -39,6 +39,8 @@ scale_fill_discrete <-  function(palname=pal, ...){
   scale_fill_brewer(palette=palname, ...)
 }
 
+knitr::opts_chunk$set(out.width = "225%", out.height = 10)
+
 ```
 
 # Taxonomic Filtering
