--- a/analysis/alpha_diversity.Rmd
+++ b/analysis/alpha_diversity.Rmd
@@ -10,21 +10,23 @@ editor_options:
 This page contains the investigation of alpha diversity investigations.
 
 ```{r data, include=FALSE, echo=FALSE}
+##Chunk iptions
+
 # load packages
 source("code/load_packages.R")
 
 # get data
-source("code/get_data.R")
+source("code/get_cleaned_data.R")
 
 theme_set(theme_bw())
-pal = "Set1"
-scale_colour_discrete <-  function(palname=pal, ...){
-  scale_colour_brewer(palette=palname, ...)
-}
-scale_fill_discrete <-  function(palname=pal, ...){
-  scale_fill_brewer(palette=palname, ...)
-}
-
+#pal = "Set1"
+# scale_colour_discrete <-  function(palname=pal, ...){
+#   scale_colour_brewer(palette=palname, ...)
+# }
+# scale_fill_discrete <-  function(palname=pal, ...){
+#   scale_fill_brewer(palette=palname, ...)
+# }
+knitr::opts_chunk$set(out.width = "225%")
 ```
 
 
@@ -34,10 +36,14 @@ scale_fill_discrete <-  function(palname=pal, ...){
 
 ```{r}
 
+plot_data <- microbiome_data$meta.dat
 
-plot_richness(phylo_data, x="SubjectID2", 
-              measures = c("Observed", "Shannon", "Simpson"))+
-  labs(x="Subject ID")
+ggplot(plot_data, aes(x=SubjectID3, y=Observed, colour=SubjectID3))+
+  geom_point(size=2) +
+  labs(x="Subject ID")+
+  guides(colour= guide_legend(title = "Subject ID"))+
+  theme(axis.text.x = element_text(angle=90, vjust=0.5))
+  
 
 
 ```
@@ -45,41 +51,134 @@ plot_richness(phylo_data, x="SubjectID2",
 
 ## Boxplots by week of study
 
+### Observed OTUs
+
 ```{r}
 
-
-plot_richness(phylo_data, x="Week",
-              measures = c("Observed", "Shannon", "Simpson"))+
-  geom_boxplot(aes(group=Week, color=Week))+
-  geom_point(aes(color=Week))+
+ggplot(plot_data, aes(x=Week, y=Observed, colour=SubjectID3))+
+  geom_boxplot(aes(group=Week))+
+  geom_point(size=2, position="jitter")+
   labs(x="Week of Study")+
+  guides(colour= guide_legend(title = "Subject ID"))+
   theme(axis.text.x = element_text(angle = 0, hjust=0.33))
 
 
 ```
 
-
-## Boxplots by Intervention
+### Shannon Index
 
 ```{r}
 
+ggplot(plot_data, aes(x=Week, y=Shannon, colour=SubjectID3))+
+  geom_boxplot(aes(group=Week))+
+  geom_point(size=2, position="jitter")+
+  labs(x="Week of Study", y="Shannon Index")+
+  guides(colour= guide_legend(title = "Subject ID"))+
+  theme(axis.text.x = element_text(angle = 0, hjust=0.33))
 
-plot_richness(phylo_data, x="Intervention",
-              measures = c("Observed", "Shannon", "Simpson"))+
+
+```
+
+### Simpson
+
+```{r}
+
+ggplot(plot_data, aes(x=Week, y=Simpson, colour=SubjectID3))+
+  geom_boxplot(aes(group=Week))+
+  geom_point(size=2, position="jitter")+
+  labs(x="Week of Study", y="Simpson")+
+  guides(colour= guide_legend(title = "Subject ID"))+
+  theme(axis.text.x = element_text(angle = 0, hjust=0.33))
+
+
+```
+
+# Intervention Effect
+
+## Overall Effect
+
+### Observed OTUs
+
+```{r}
+
+ggplot(plot_data, aes(x=Intervention, y=Observed))+
   geom_boxplot(aes(group=Intervention, color=Intervention))+
-  geom_point(aes(color=Intervention))+
+  geom_point(position="jitter",aes(color=Intervention))+
   labs(x="Intervention Group")+
   theme(axis.text.x = element_text(angle = 0, hjust=0.33))
 
-plot_richness(phylo_data, x="Intervention",
-              measures = c("Observed", "Shannon", "Simpson"))+
+
+```
+
+### Shannon Index
+
+```{r}
+
+ggplot(plot_data, aes(x=Intervention, y=Shannon))+
   geom_boxplot(aes(group=Intervention, color=Intervention))+
-  geom_point(aes(color=Intervention))+
+  geom_point(position="jitter",aes(color=Intervention))+
+  labs(x="Intervention Group")+
+  theme(axis.text.x = element_text(angle = 0, hjust=0.33))
+
+
+```
+
+### Simpson
+
+```{r}
+
+ggplot(plot_data, aes(x=Intervention, y=Simpson))+
+  geom_boxplot(aes(group=Intervention, color=Intervention))+
+  geom_point(position="jitter",aes(color=Intervention))+
+  labs(x="Intervention Group")+
+  theme(axis.text.x = element_text(angle = 0, hjust=0.33))
+
+
+```
+
+## Changes Over Time
+
+### Observed OTUs
+
+```{r}
+
+ggplot(plot_data, aes(x=Intervention, y=Observed))+
+  geom_boxplot(aes(group=Intervention, color=Intervention))+
+  geom_point(position="jitter",aes(color=Intervention))+
+  facet_grid(.~Week)+
+  labs(x="Intervention Group by Week")+
+  guides(colour= guide_legend(title = "Subject ID"))+
+  theme(axis.text.x = element_text(angle = 0, hjust=0.33))
+
+
+```
+
+### Shannon Index
+
+```{r}
+
+ggplot(plot_data, aes(x=Intervention, y=Shannon))+
+  geom_boxplot(aes(group=Intervention, color=Intervention))+
+  geom_point(position="jitter",aes(color=Intervention))+
+  facet_grid(.~Week)+
+  labs(x="Intervention Group by Week")+
+  guides(colour= guide_legend(title = "Subject ID"))+
+  theme(axis.text.x = element_text(angle = 0, hjust=0.33))
+
+
+```
+
+### Simpson
+
+```{r}
+
+ggplot(plot_data, aes(x=Intervention, y=Simpson))+
+  geom_boxplot(aes(group=Intervention, color=Intervention))+
+  geom_point(position="jitter",aes(color=Intervention))+
   facet_grid(.~Week)+
   labs(x="Intervention Group by Week")+
   theme(axis.text.x = element_text(angle = 0, hjust=0.33))
 
 
 ```
-
 
