--- a/analysis/analysis_anthropometric.Rmd
+++ b/analysis/analysis_anthropometric.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Modeling Changes in Alpha Diversity over Time"
+title: "Anthropometric Analyses"
 output:
   workflowr::wflow_html:
     toc: true
