--- a/analysis/analysis_beta_diversity.Rmd
+++ b/analysis/analysis_beta_diversity.Rmd
@@ -284,7 +284,7 @@ p1 <- ggplot(dat.wt, aes(x=Week, y=Axis.1, color=Intervention2)) +
   facet_wrap(.~SubjectID10,ncol=6) +
   scale_color_manual(values=cols)+
   labs(y="PC1", 
-       title="Individualized beta-diversity over study diration")+
+       title="Individualized beta-diversity over study duration")+
   guides(colour= guide_legend(title = "Intervention"))+
   theme(panel.grid = element_blank(),
         strip.text.x = element_text(angle = 0, size = 11, face = "italic"),
@@ -293,7 +293,7 @@ p1 <- ggplot(dat.wt, aes(x=Week, y=Axis.1, color=Intervention2)) +
         plot.title = element_text(hjust = 0.5),
         #axis.title.x = element_blank(),
         strip.background = element_blank(),
-        legend.position = "right",
+        legend.position = c(0.92, 0.25),
         #legend.text = element_text(size = 7),
         #legend.title = element_blank(),
         panel.spacing.x=unit(0.001, "lines"))
@@ -301,17 +301,17 @@ p1 <- ggplot(dat.wt, aes(x=Week, y=Axis.1, color=Intervention2)) +
 p1
 
   library(cowplot)
-  p1.leg <- get_legend(p1)
+  #p1.leg <- get_legend(p1)
   
-  p1.nl <- p1 + theme(legend.position = "none")
+  #p1.nl <- p1 + theme(legend.position = "none")
 
-  ggsave("fig/figure2.pdf", p1.nl, width=7.9,height=4.5, units="in")
+  ggsave("fig/figure2.pdf", p1, width=7.9,height=4.5, units="in")
   
   
-  bigplotlegend <- plot_grid(p1.leg, nrow =1)
+  #bigplotlegend <- plot_grid(p1.leg, nrow =1)
   
-  save_plot("fig/figure2_legend.pdf", bigplotlegend,
-            base_width = 7.9, base_height = 4.5)
+  #save_plot("fig/figure2_legend.pdf", bigplotlegend,
+  #          base_width = 7.9, base_height = 4.5)
   
 ```
 
