--- a/analysis/summary_stats.Rmd
+++ b/analysis/summary_stats.Rmd
@@ -14,7 +14,7 @@ This page contains the summary statistics of participants' data across the study
 source("code/load_packages.R")
 
 # get data
-source("code/get_data.R")
+source("code/get_cleaned_data.R")
 
 ```
 
@@ -25,9 +25,17 @@ source("code/get_data.R")
 
 ```{r}
 
-sumTab <- microbiome_data$meta.dat %>%
-  group_by(Week) %>%
-  summarise(N = n(),
+mydata <- microbiome_data$meta.dat %>%
+  mutate(female = ifelse(Gender == "F", 1, 0),
+         c.age = Age - mean(Age),
+         IntB = ifelse(Intervention == "B", 1, 0),
+         Stress = Stress.Scale,
+         hispanic = ifelse(Ethnicity %in% c("White", "Asian", "Native America"), 1, 0),
+         BMI = Weight_pre/((Height_cm/100)**2))
+
+sumTab <- mydata %>%
+  dplyr::group_by(Week) %>%
+  dplyr::summarise(N = n(),
             Age_Mean = mean(Age),
             Age_SD = sd(Age),
             Weight_kg_M = mean(Weight_kg),
@@ -39,3 +47,163 @@ kable(sumTab, format="html", digits=1) %>%
   kable_styling(full_width = T)
 
 ```
+
+
+## Baseline Only for Significance Test
+
+
+```{r}
+
+sumTab <- mydata %>%
+  dplyr::filter(Week==1) %>%
+  dplyr::group_by(Intervention) %>%
+  dplyr::summarise(N = n(),
+            PercentMale = (1 - mean(female))*100,
+            Age_Mean = mean(Age),
+            Age_SD = sd(Age),
+            Weight_kg_M = mean(Weight_kg),
+            Weight_kg_SD = sd(Weight_kg),
+            Height_cm_M = mean(Height_cm),
+            Height_cm_SD = sd(Height_cm),
+            BMI_M = mean(BMI),
+            BMI_SD = sd(BMI),
+            VFL_M = mean(Visceral_Fat_Level_pre),
+            VFL_SD = sd(Visceral_Fat_Level_pre),
+            PercBF_M = mean(Perc_Body_Fat_pre),
+            PercBF_SD = sd(Perc_Body_Fat_pre),
+            PercLF_M = mean(LBM_pre),
+            PercLF_SD = sd(LBM_pre),
+            HEI_Total_M = mean(HEI_Total, na.rm=T),
+            HEI_Total_SD = sd(HEI_Total, na.rm=T))
+
+sumTab <- t(sumTab)
+M <- sumTab[rownames(sumTab) %like% "_M",]
+SD <- sumTab[rownames(sumTab) %like% "_SD",]
+tab <- cbind(M, SD)
+tab <- tab[, c(1,3,2,4)]
+Ng <- c(sumTab[2,1], NA, sumTab[2,2], NA)
+PercentMale <- c(sumTab[3,1], NA, sumTab[3,2], NA)
+
+tab <- rbind(Ng, PercentMale, tab)
+colnames(tab) <- c("GroupA_Mean","GroupA_SD", "GroupB_Mean", "GroupB_SD")
+
+tab <- apply(tab, 1:2, as.numeric)
+#tab
+```
+
+Next, we conducted Mann-Whitney-U test to compare distributions across intervention vs. placebo groups.
+
+
+```{r}
+
+dat <- filter(mydata, Week == 1)
+
+VAR <- c("Age", "Weight_kg", "Height_cm", "BMI", "Visceral_Fat_Level_pre", "Perc_Body_Fat_pre", "LBM_pre", "HEI_Total")
+out <- numeric(length(VAR))
+
+i <- 1
+for(i in 1:length(VAR)){
+  fit <- wilcox.test(dat[,VAR[i]] ~ dat$IntB)
+  out[i] <- fit$p.value
+}
+
+out <- c(NA, NA, out)
+out <- matrix(out, ncol=1)
+colnames(out) <- "P_Value"
+tab <- cbind(tab, out)
+
+kable(tab, format="html", digits=3) %>%
+  kable_styling(full_width = T)
+tab <- as.data.frame(tab)
+#write.csv(tab,paste0(w.d, "/tab/table_1_results.csv"))
+
+```
+
+## numbers by ASA24, FFQ, Stool, and Blood Samples
+
+
+### ASA24 
+
+```{r}
+
+
+asa24 <- microbiome_data$meta.dat
+
+# If the recall number is missing, then they didn't response so we need to exclude them in the count.
+
+asa24 %>%
+  dplyr::group_by(Week)%>%
+  filter(is.na(RecallNo)==F)%>%
+  dplyr::summarise(N=n())
+
+```
+
+### Food Frequency Questionnaire (FFQ)
+
+HEI scores were only gathered at onetime point.
+So, we need to subset to only 1 week then exclude the missing observations.
+
+
+```{r}
+
+ffq <- microbiome_data$meta.dat
+
+ffq %>%
+  dplyr::filter(Week == 1, is.na(HEI_Total)==F)%>%
+  dplyr::summarise(N = n())
+
+```
+
+### Stool Samples
+
+```{r}
+
+Nvec <- matrix(ncol=1, nrow=5, dimnames = list(c("Total", "Week1", "Week4", "Week8", "Week12"), c("N")))
+
+# total number of samples
+Nvec[1,1] <- nsamples(phylo_data)
+
+# week 1
+subph <- subset_samples(phylo_data, Week == 1)
+Nvec[2,1] <- nsamples(subph)
+
+# week 4
+subph <- subset_samples(phylo_data, Week == 4)
+Nvec[3,1] <- nsamples(subph)
+
+# week 8
+subph <- subset_samples(phylo_data, Week == 8)
+Nvec[4,1] <- nsamples(subph)
+
+# week 12
+subph <- subset_samples(phylo_data, Week == 12)
+Nvec[5,1] <- nsamples(subph)
+
+Nvec
+
+```
+
+
+### Blood Samples
+
+```{r}
+# Blood Samples
+blood_data <- read_excel("data/Blood measures data/Copy of Fiber Study Blood Results.xlsx")
+
+meta_data <- microbiome_data$meta.dat
+
+keepVar <- c("SubjectID","Week", "Intervention", "Stress.Scale", "Ethnicity", "Gender", "Age")
+meta_data <- meta_data [, keepVar] %>%
+  filter(Week == 1)
+
+blood_data <- full_join(blood_data, meta_data)
+
+blood_data <- distinct(blood_data, SubjectID, time,.keep_all = T)
+
+blood_data %>%
+  dplyr::group_by(time) %>%
+  dplyr::summarise(N=n())
+
+```
+
+
